# tokenmaxx

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agents/: README.md  settings.json
.agents/agents/: architect.md  cli-author.md  debugger.md  executor.md  perf-optimizer.md  qa.md  reviewer.md  security-auditor.md
.agents/commands/: agent-create.md  code-review.md  commit.md  dwp-create.md  dwp-execute.md  dwp-refine.md  dwp-resume.md  dwp-status.md  dwp-verify.md  pr.md  skill-create.md
.agents/docs/: COMMANDS_REFERENCE.md  skills_agents_catalog.md
.agents/skills/tokenmaxx-cli-change/: SKILL.md
.agents/skills/tokenmaxx-daemon-debug/: SKILL.md
.dwp/drafts/: .gitkeep
.dwp/plans/: .gitkeep
docs/: AI_AGENT_COLLAB.md  AI_AGENT_ONBOARDING.md  ARCHITECTURE.md  DEVELOPMENT_COMMANDS.md  ECOSYSTEM_CONTEXT.md  PERFORMANCE.md  PRODUCT_SPEC.md  PR_REVIEW_WORKFLOW.md  README.md  SECURITY.md  STANDARDS.md  TESTING_GUIDE.md
docs/github-workflows/: test.yml
docs/superpowers/plans/: 2026-07-11-codex-provider.md  2026-07-16-codex-capacity-retry.md
docs/superpowers/specs/: 2026-07-11-codex-provider-design.md  2026-07-16-codex-capacity-retry-design.md
scripts/: test_tokenmaxx.py  tokenmaxx.py
tests/: test_codex.py  test_package.py  test_tokenmaxx.py
tokenmaxx/: README.md  __init__.py  claude.py  cli.py  codex.py  config.py  launchd.py  queue.py  runner.py  transcript.py
