[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenmaxx"
version = "0.5.4"
description = "Limit-aware resume queue for Claude Code and Codex sessions"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Tokenmaxx contributors" }
]
keywords = ["claude-code", "codex", "automation", "cli", "queue", "resume"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = []

[project.scripts]
tokenmaxx = "tokenmaxx.cli:main"

[project.urls]
Homepage = "https://github.com/akle/tokenmaxx"
Repository = "https://github.com/akle/tokenmaxx"
Issues = "https://github.com/akle/tokenmaxx/issues"

[tool.setuptools.packages.find]
include = ["tokenmaxx*"]
